tests/fail/index_non_array.jolt
fn main() void {
    let x = 1;
    let y = x[0];
}
